Handle action selection and dynamic connection creation.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -3,7 +3,7 @@
     <template>
         <style>
             #area {
-                background: url("../images/grid.png");
+                background: rgba(0, 0, 0, .8);
                 width: 1200px;
                 height: 480px;
             }
@@ -13,6 +13,7 @@
     <script src="../bower_components/raphael/raphael.js"></script>
     <script src="../scripts/draggable.js"></script>
     <script src="../scripts/connection.js"></script>
+    <script src="../scripts/point.js"></script>
     <script src="../scripts/action.js"></script>
     <script src="../scripts/graph.js"></script>
     <script>
