--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -49,8 +49,7 @@
                     },
                     "connections": [
                         {"from": "blurShader.gl_FragColor", "to": "mixShaders.second"},
-                        {"from": "bwShader.gl_FragColor", "to": "mixShaders.first"}//,
-//                        {"from": "mixShaders.gl_FragColor", "to": "finalOutput.result"}
+                        {"from": "bwShader.gl_FragColor", "to": "mixShaders.first"}
                     ]
                 });
             }
