--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -3,7 +3,7 @@
     <template>
         <style>
             #area {
-                background: rgba(0, 0, 0, .8);
+                background: #1d283a;
                 width: 1200px;
                 height: 480px;
             }
@@ -13,6 +13,7 @@
     <script src="../bower_components/jwerty/jwerty.js"></script>
     <script src="../bower_components/raphael/raphael.js"></script>
     <script src="../scripts/draggable.js"></script>
+    <script src="../scripts/config.js"></script>
     <script src="../scripts/connection.js"></script>
     <script src="../scripts/point.js"></script>
     <script src="../scripts/grid.js"></script>
