Implement models in graph.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -25,11 +25,12 @@
     <!-- CodeGraph library -->
     <script src="../lib/index.js"></script>
     <script src="../lib/utils/vec2.js"></script>
-    <script src="../lib/nodes/graph.js"></script>
     <script src="../lib/nodes/container.js"></script>
     <script src="../lib/nodes/point.js"></script>
+    <script src="../lib/nodes/model.js"></script>
     <script src="../lib/nodes/action.js"></script>
     <script src="../lib/nodes/connection.js"></script>
+    <script src="../lib/nodes/graph.js"></script>
     <script src="../lib/visitors/renderer.js"></script>
     <script src="../lib/visitors/saver.js"></script>
 
@@ -38,46 +39,9 @@
             ready: function () {
                 var snap = Snap(this.$.svg);
                 var graph = new cg.Graph();
-
-                graph.registerActions({
-                    "rounded_rect": {
-                        "inputs": [
-                            {"type": "color", "name": "color", value: "#fff"},
-                            {"type": "number", "name": "aspect_ratio", value: 1.0},
-                            {"type": "number", "name": "stroke_size", value: 1.0},
-                            {"type": "number", "name": "border_radius", value: 0.2},
-                            {"type": "boolean", "name": "is_solid", value: true}
-                        ],
-                        "outputs": [
-                            {"type": "color", "name": "frag_color"}
-                        ]
-                    },
-                    "blur": {
-                        "inputs": [
-                            {"type": "number", "name": "diameter"},
-                            {"type": "vec2", "name": "resolution"}
-                        ],
-                        "outputs": [{"type": "color", "name": "frag_color"}]
-                    },
-                    "black_and_white": {
-                        "inputs": [],
-                        "outputs": [{"type": "color", "name": "frag_color"}]
-                    },
-                    "mix": {
-                        "inputs": [
-                            {"type": "color", "name": "first"},
-                            {"type": "color", "name": "second"},
-                            {"type": "number", "name": "ratio"}
-                        ],
-                        "outputs": [{"type": "color", "name": "frag_color"}]
-                    },
-                    "output": {
-                        "inputs": [{"type": "color", "name": "result"}],
-                        "outputs": []
-                    }
-                });
-
                 var renderer = new cg.Renderer();
+
+                graph.addModel(new cg.Model("rounded_rect"));
 
                 renderer.render(snap, graph);
             }
