--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -50,7 +50,7 @@
                                 {"type": "color", "name": "y"},
                                 {"type": "number", "name": "a"}
                             ],
-                            "output": [
+                            "outputs": [
                                 {"type": "color", "name": "color"}
                             ]
                         },
@@ -63,7 +63,7 @@
                     },
                     "actions": [
                         {"name": "mix", "position": [50, 50] },
-                        {"name": "output", "position": [200, 150] }
+                        {"name": "output", "position": [300, 250] }
                     ],
                     "connections": [
                         {"from": [0, "color"], "to": [1, "color"]}
