--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -51,12 +51,12 @@
                                 {"type": "number", "name": "a"}
                             ],
                             "outputs": [
-                                {"type": "color", "name": "color"}
+                                {"type": "color", "name": "frag_color"}
                             ]
                         },
                         "output": {
                             "inputs": [
-                                {"type": "color", "name": "color"}
+                                {"type": "color", "name": "frag_color"}
                             ],
                             "outputs": []
                         }
@@ -66,7 +66,7 @@
                         {"name": "output", "position": [400, 100] }
                     ],
                     "connections": [
-                        {"from": [0, "color"], "to": [1, "color"]}
+                        {"from": [0, "frag_color"], "to": [1, "frag_color"]}
                     ]
                 });
                 renderer.render(paper, graph);
