--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -24,6 +24,8 @@
     <!-- CodeGraph library -->
     <script src="../lib/index.js"></script>
     <script src="../lib/utils/vec2.js"></script>
+    <script src="../lib/utils/event-emitter.js"></script>
+    <script src="../lib/utils/misc.js"></script>
     <script src="../lib/nodes/container.js"></script>
     <script src="../lib/nodes/point.js"></script>
     <script src="../lib/nodes/model.js"></script>
