Fixed connection offset Added zoom stub

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -24,6 +24,7 @@
     <!-- CodeGraph library -->
     <script src="../lib/index.js"></script>
     <script src="../lib/utils/vec2.js"></script>
+    <script src="../lib/utils/snap-zoom.js"></script>
     <script src="../lib/utils/event-emitter.js"></script>
     <script src="../lib/utils/misc.js"></script>
     <script src="../lib/nodes/container.js"></script>
