--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -46,29 +46,50 @@
 
                 loader.load(graph, {
                     "models": {
+                        "rounded_rect": {
+                            "inputs": [
+                                {"type": "color", "name": "color", value: "#fff"},
+                                {"type": "number", "name": "aspect_ratio", value: 1.0},
+                                {"type": "number", "name": "stroke_size", value: 1.0},
+                                {"type": "number", "name": "border_radius", value: 0.2},
+                                {"type": "boolean", "name": "is_solid", value: true}
+                            ],
+                            "outputs": [
+                                {"type": "color", "name": "frag_color"}
+                            ]
+                        },
+                        "blur": {
+                            "inputs": [
+                                {"type": "number", "name": "diameter"},
+                                {"type": "vec2", "name": "resolution"}
+                            ],
+                            "outputs": [{"type": "color", "name": "frag_color"}]
+                        },
+                        "black_and_white": {
+                            "inputs": [],
+                            "outputs": [{"type": "color", "name": "frag_color"}]
+                        },
                         "mix": {
                             "inputs": [
                                 {"type": "color", "name": "x"},
                                 {"type": "color", "name": "y"},
                                 {"type": "number", "name": "a"}
                             ],
-                            "outputs": [
-                                {"type": "color", "name": "frag_color"}
-                            ]
+                            "outputs": [{"type": "color", "name": "frag_color"}]
                         },
                         "output": {
-                            "inputs": [
-                                {"type": "color", "name": "frag_color"}
-                            ],
+                            "inputs": [{"type": "color", "name": "frag_color"}],
                             "outputs": []
                         }
                     },
                     "actions": [
-                        {"name": "mix", "position": [50, 50] },
-                        {"name": "output", "position": [400, 100] }
+                        {"name": "blur", "position": [150, 50]},
+                        {"name": "black_and_white", "position": [200, 250]},
+                        {"name": "mix", "position": [450, 150] },
+                        {"name": "output", "position": [800, 200] }
                     ],
                     "connections": [
-                        {"from": [0, "frag_color"], "to": [1, "frag_color"]}
+                        {"from": [2, "frag_color"], "to": [3, "frag_color"]}
                     ]
                 });
                 renderer.render(paper, graph);
