--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -24,7 +24,6 @@
     <!-- CodeGraph library -->
     <script src="../lib/index.js"></script>
     <script src="../lib/utils/vec2.js"></script>
-    <script src="../lib/utils/snap-zoom.js"></script>
     <script src="../lib/utils/event-emitter.js"></script>
     <script src="../lib/utils/misc.js"></script>
     <script src="../lib/nodes/container.js"></script>
@@ -33,9 +32,10 @@
     <script src="../lib/nodes/action.js"></script>
     <script src="../lib/nodes/connection.js"></script>
     <script src="../lib/nodes/graph.js"></script>
-    <script src="../lib/visitors/renderer.js"></script>
-    <script src="../lib/visitors/saver.js"></script>
-    <script src="../lib/visitors/loader.js"></script>
+    <script src="../lib/renderer/index.js"></script>
+    <script src="../lib/renderer/zoom.js"></script>
+    <script src="../lib/serialization/saver.js"></script>
+    <script src="../lib/serialization/loader.js"></script>
     <script>
         Polymer({
             ready: function () {
@@ -92,7 +92,8 @@
                         {"from": [2, "frag_color"], "to": [3, "frag_color"]}
                     ]
                 });
-                renderer.render(paper, graph);
+                renderer.init(paper);
+                renderer.render(graph);
             }
         });
     </script>
