--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html>
-    <head>
-        <title>CodeGraph</title>
-        <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-        <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-        <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-        <link rel="import" href="elements/code-graph.html">
-    </head>
-    <body>
-        <code-graph></code-graph>
-    </body>
+<head>
+    <title>CodeGraph</title>
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+    <link rel="import" href="elements/code-graph.html">
+</head>
+<style>
+    html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+    }
+</style>
+<body>
+<code-graph></code-graph>
+</body>
 </html>
