--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -44,7 +44,7 @@
                 var paper = Snap(this.$.svg);
                 var graph = new cg.Graph();
                 var loader = new cg.Loader();
-                var renderer = new cg.Renderer();
+                var renderer = new cg.Renderer(paper);
 
                 loader.load(graph, {
                     "models": {
@@ -94,7 +94,6 @@
                         {"from": [2, "frag_color"], "to": [3, "frag_color"]}
                     ]
                 });
-                renderer.initialize(paper);
                 renderer.render(graph);
             }
         });
