Add rect selection, buggy when moving the main group.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -13,6 +13,11 @@
                 width: 100%;
                 height: 100%;
             }
+            #svg #selection {
+                fill: rgba(255, 255, 255, 0.2);
+                stroke: rgba(255, 255, 255, 0.5);
+                stroke-width: 1px;
+            }
             #svg .action rect {
                 fill: rgba(25, 35, 50, 0.8);
                 stroke: #ccc;
