Add a rounded_rect instance.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -126,7 +126,8 @@
                         {"name": "blur", "position": [150, 50]},
                         {"name": "black_and_white", "position": [200, 250]},
                         {"name": "mix", "position": [450, 150] },
-                        {"name": "output", "position": [800, 200] }
+                        {"name": "output", "position": [800, 200] },
+                        {"name": "rounded_rect", "position": [1100, 150] }
                     ],
                     "connections": [
                         {"from": [2, "frag_color"], "to": [3, "frag_color"]}
