Add more connections.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -130,6 +130,8 @@
                         {"name": "rounded_rect", "position": [1100, 150] }
                     ],
                     "connections": [
+                        {"from": [0, "frag_color"], "to": [2, "x"]},
+                        {"from": [1, "frag_color"], "to": [2, "y"]},
                         {"from": [2, "frag_color"], "to": [3, "frag_color"]}
                     ]
                 });
