Handle collision for connection.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -131,8 +131,7 @@
                     ],
                     "connections": [
                         {"from": [0, "frag_color"], "to": [2, "x"]},
-                        {"from": [1, "frag_color"], "to": [2, "y"]},
-                        {"from": [2, "frag_color"], "to": [3, "frag_color"]}
+                        {"from": [1, "frag_color"], "to": [2, "y"]}
                     ]
                 });
                 renderer.render(graph);
